--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Juan Sanchez">
-    <meta name="Keywords" content="CV, Juan Sanchez, desarrollo web, html, java script, css">
-    <meta name="description" content="Curriculum Vitae de Juan Sanchez">
-    <title>CV Juan Sanchez</title>
+    <meta name="author" content="Juan Rodriguez">
+    <meta name="Keywords" content="CV, Juan Rodriguez, desarrollo web, html, java script, css">
+    <meta name="description" content="Curriculum Vitae de Juan Rodriguez">
+    <title>CV Juan Rodriguez</title>
     <!-- Open Graph data -->
-    <meta property="og:title" content="Curriculum Vitae de Juan Sanchez" />
+    <meta property="og:title" content="Curriculum Vitae de Juan Rodriguez" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content=" http://www.juansanchez.com" />
     <meta property="og:image" content=" http://juansanchez.com/imagenes/foto_perfil2.jpg" />
-    <meta property="og:description" content="Curriculum Vitae de Juan Sanchez - Desarrollador de Sitios Web" />
+    <meta property="og:description" content="Curriculum Vitae de Juan Rodriguez - Desarrollador de Sitios Web" />
     <link rel="shortcut icon" href="imagenes/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -24,8 +24,8 @@
 <body>
 <!-- ========== Comienzo Header=============-->
   <header class="d-flex flex-column justify-content-center align-items-center">
-    <img class="rounded-circle" src="imagenes/foto_perfil2.jpg" alt="Foto de Juan Sanchez - Desarrollador de sitios web">
-    <h1>Juan Sanchez</h1>
+    <img class="rounded-circle" src="imagenes/foto_perfil2.jpg" alt="Foto de Juan Rodriguez - Desarrollador de sitios web">
+    <h1>Juan Rodriguez</h1>
     <h2>Desarrollador de sitios web</h2>
 
   </header>
@@ -54,6 +54,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#habilidades">Habilidades</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#idiomas">Idiomas</a>
+        </li>
 
         </li>
       </ul>
@@ -70,23 +73,22 @@
     <div class="container">
 
       <div>
-        <h2>Datos Personales</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-      </div>
+        <h3>Datos Personales</h3>
+        <p>Desarrollador web innovador, proactivo y con capacidad para desarrolar páginas web funcionales, elegantes y adaptables para clietnes exigentes
 
       <div class="row">
         <div class="col-lg-4 d-flex justify-content-center align-items-center">
           <img  src="imagenes/datospersonales.jpg" class="img-fluid" alt="Datos Personales">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content">
-          <h3>Diseñador Web.</h3>
+          <h4>Diseñador Web.</h4>
           <p class="fst-italic">
             Diseñador de sitios web con amplios conocimientos en HTML, CSS y JS
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul class = "list-unstyled">
-                <li><i class="bi bi-chevron-right"></i> <strong>Nombre y Apellito:</strong> Juan Sanchez</li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Nombre y Apellito:</strong> Juan Rodriguez</li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Fecha de Nacimiento:</strong> 12-04-1980</li>
                 <li><i class="bi bi-chevron-right"></i> <strong>DNI:</strong> 253332565</li>
                 <li><i class="bi bi-chevron-right"></i> <strong>CUIL:</strong> 23-253332565-5</li>
@@ -116,16 +118,19 @@
 <!-- ========== Comienzo Seccion Formacion =============-->
 <section class="container" id="formacion">
 
-  <h2>Formación</h2>
-  <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate.Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+  <h3>Formación</h3>
+    <ul class = "list-unstyled">
+    <li><i class="bi bi-chevron-right"></i>2010 -  Analista de Sistemas UTN Córdoba</li>
+    <li><i class="bi bi-chevron-right"></i>2014 - Curso de Diseño web</li>
 
+  </ul>
 </section>
 <!-- ========== Fin Seccion Formacio =============-->
 
 <!-- ========== Comienzo Seccion experiencia =============-->
 <section class="container" id="experiencia">
   
-  <h2>Experiencia</h2>
+  <h3>Experiencia</h3>
   <p class="fst-italic">
     10/2018 - Analista - Programador <button onclick="funcDesplegar('lista1')" type="button" class="btn"><i class="bi bi-layout-text-sidebar"></i></button>
     
@@ -133,8 +138,9 @@
   <ul id="lista1" class = "list-unstyled">
     <li><i class="bi bi-chevron-right"></i>Toma de requerimientos con el cliente</li>
     <li><i class="bi bi-chevron-right"></i>Análisis de requerimientos y diseño de aplicaciones</li>
-    <li><i class="bi bi-chevron-right"></i>esarrollo de aplicaciones utilizando Javascript, PHP, MySQL</li>
+    <li><i class="bi bi-chevron-right"></i>Desarrollo de aplicaciones utilizando Javascript, PHP, MySQL</li>
     <li><i class="bi bi-chevron-right"></i>Soporte técnico a clientes</li>
+    <li><i class="bi bi-chevron-right"></i>Realización de test de aplicaciones</li>
   </ul>
 
   <p class="fst-italic">
@@ -142,8 +148,12 @@
     <button onclick="funcDesplegar('lista2')" type="button" class="btn"><i class="bi bi-layout-text-sidebar"></i></button>
   </p>
   <ul id="lista2" class = "list-unstyled">
-    <li><i class="bi bi-chevron-right"></i>Desarrollo Front End y Back End de aplicaciones con Typescript, Javascript, PHP, MySQL, HTML5</li>
+    <li><i class="bi bi-chevron-right"></i>Diseño y Maquetacion de sitios web</li>
+    <li><i class="bi bi-chevron-right"></i>Rediseño de sitios web para mejorar la navegación y su atractivo visual.</li>
+    <li><i class="bi bi-chevron-right"></i>Desarrollo Front End y Back End de aplicaciones con Javascript, PHP, MySQL, HTML5</li>
     <li><i class="bi bi-chevron-right"></i>Realización de test de aplicaciones</li>
+    <li><i class="bi bi-chevron-right"></i>Soporte técnico a clientes</li>
+    <li><i class="bi bi-chevron-right"></i>Validación de códigos para seguridad y compatibilidad con diferentes dispositivos o sistemas operativos</li>
     </ul>
  </section>
 <!-- ========== Fin Seccion experiencia =============-->
@@ -151,13 +161,26 @@
 <!-- ========== Comienzo Seccion Habilidades =============-->
 <section class="container" id="habilidades">
 
-  <h2>Habilidades</h2>
+  <h3>Habilidades</h3>
  
   <ul class = "list-unstyled">
-    <li><i class="bi bi-chevron-right"></i>Javacript</li>
-    <li><i class="bi bi-chevron-right"></i>PHP</li>
-    <li><i class="bi bi-chevron-right"></i>CSS</li>
-    <li><i class="bi bi-chevron-right"></i>HTML</li>
+    <li><i class="bi bi-filetype-js"></i>Javacript</li>
+    <li><i class="bi bi-filetype-php"></i></i>PHP</li>
+    <li><i class="bi bi-filetype-css"></i>CSS</li>
+    <li><i class="bi bi-filetype-html"></i>HTML</li>
+  </ul>
+
+ </section>
+<!-- ========== Fin Seccion experiencia =============-->
+
+<!-- ========== Comienzo Seccion Idiomas =============-->
+<section class="container" id="idiomas">
+
+  <h3>Idiomas</h3>
+ 
+  <ul class = "list-unstyled">
+    <li><img class="icobandera" src="imagenes/ico_esp.png" alt="Icono bandera española"></i>Español</li>
+    <li><img class="icobandera" src="imagenes/ico_ingles.png" alt="Icono bandera inglesa"></i>Ingles</li>
   </ul>
 
  </section>
