--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Curriculum Vitae de Juan Rodriguez" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content=" http://www.juansanchez.com" />
-    <meta property="og:image" content=" http://juansanchez.com/imagenes/foto_perfil2.jpg" />
+    <meta property="og:url" content=" https://juanrodriguezcv.github.io" />
+    <meta property="og:image" content=" https://juanrodriguezcv.github.io/imagenes/foto_perfil2.jpg" />
     <meta property="og:description" content="Curriculum Vitae de Juan Rodriguez - Desarrollador de Sitios Web" />
     <link rel="shortcut icon" href="imagenes/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
